--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@ permalink: /404.html
 </head>
 <body class="gray-bg">
     <div class="middle-box text-center animated fadeInDown">
-        <h1>404</h1>
+        <h1>404 edit title</h1>
         <h3 class="font-bold">Page Not Found</h3>
         <div class="error-desc">
             <p>
